--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     .thumb-frame {
       position: relative;
       width: 100%;
-      aspect-ratio: 16 / 9;     /* default for grid views */
+      aspect-ratio: 16 / 9;
       background: #f2f2f2;
       overflow: hidden;
       border-radius: 12px;
@@ -190,7 +190,7 @@
       width: 100%;
       height: 100%;
       display: block;
-      object-fit: cover;        /* cover in grid views */
+      object-fit: cover;
       object-position: center;
       -webkit-user-select: none;
       user-select: none;
@@ -203,14 +203,14 @@
     .cards-1 .article-card .thumb-frame{
       width: 100%;
       margin: 0;
-      aspect-ratio: 2 / 1;          /* slightly shorter than 16:9 */
+      aspect-ratio: 2 / 1;
       border-radius: 12px;
       overflow: hidden;
       background: transparent;
     }
     .cards-1 .article-card .thumb-frame img.thumb{
-      object-fit: cover !important;  /* fill, no letterboxing */
-      object-position: center 35%;   /* bias crop upward a bit */
+      object-fit: cover !important;
+      object-position: center 35%;
       background: transparent !important;
     }
 
@@ -263,6 +263,7 @@
     <div class="container">
       <!-- Sidebar -->
       <aside class="sidebar">
+        <!-- (unchanged sidebar markup) -->
         <section class="filter-section">
           <h2>Filters</h2>
 
@@ -382,6 +383,7 @@
           <button class="view-option" data-view="1" role="tab" aria-selected="false">List</button>
           <button class="view-option active" data-view="2" role="tab" aria-selected="true">2-up</button>
           <button class="view-option" data-view="3" role="tab" aria-selected="false">3-up</button>
+          <button class="view-option" data-view="lr" role="tab" aria-selected="false">Left vs Right</button>
         </div>
 
         <div id="error" class="error" style="display:none;"></div>
@@ -405,6 +407,7 @@
         this.apiEndpoint = '/.netlify/functions/news';
         this.currentCategory = '';
         this.currentBias = 'default';
+        this.currentLayout = '2'; // '1' | '2' | '3' | 'lr'
         this.autoRefreshMs = 30 * 60 * 1000;
         this.viewRoot = document.body;
         this.debouncedLoadNews = this.debounce(() => this.loadNews(), 400);
@@ -426,18 +429,13 @@
           this.loadNews();
         });
 
-        // Basic selects (debounced)
         ['country-select','language-select','max-select','time-range']
           .forEach(id => document.getElementById(id).addEventListener('change', () => this.debouncedLoadNews()));
 
-        // Reliability slider on change (not every pixel)
         document.getElementById('reliability').addEventListener('change', () => this.debouncedLoadNews());
-
-        // Balanced + Cluster toggles
         document.getElementById('balanced-toggle').addEventListener('change', () => this.debouncedLoadNews());
         document.getElementById('cluster-toggle').addEventListener('change', () => this.debouncedLoadNews());
 
-        // Topics
         document.querySelectorAll('#topics li').forEach(li => {
           li.addEventListener('click', () => {
             document.querySelectorAll('#topics li').forEach(x => x.classList.remove('active'));
@@ -447,7 +445,6 @@
           });
         });
 
-        // Bias buttons
         document.querySelectorAll('#bias-filter .bias-option').forEach(opt => {
           opt.addEventListener('click', () => {
             document.querySelectorAll('#bias-filter .bias-option').forEach(x => {
@@ -465,9 +462,15 @@
           btn.addEventListener('click', () => {
             viewBtns.forEach(x => { x.classList.remove('active'); x.setAttribute('aria-selected','false'); });
             btn.classList.add('active'); btn.setAttribute('aria-selected','true');
-            const mode = btn.dataset.view;
+
+            const mode = btn.dataset.view; // '1' | '2' | '3' | 'lr'
+            this.currentLayout = mode;
+
+            // LR uses the exact same grid as 2-up (only filters the set)
             this.viewRoot.classList.remove('cards-1','cards-2','cards-3');
-            this.viewRoot.classList.add(`cards-${mode}`);
+            this.viewRoot.classList.add(mode === 'lr' ? 'cards-2' : `cards-${mode}`);
+
+            this.loadNews();
           });
         });
       }
@@ -495,7 +498,6 @@
           if (this.currentCategory) params.set('category', this.currentCategory);
           if (this.currentBias && this.currentBias !== 'default') params.set('bias', this.currentBias);
 
-          // Time range (server will filter; GNews never sees from/to)
           const tr = document.getElementById('time-range').value;
           if (tr !== 'any') {
             let ms = 0;
@@ -506,11 +508,9 @@
             params.set('to', new Date().toISOString());
           }
 
-          // Reliability floor
           const minReliability = parseInt(document.getElementById('reliability').value, 10) || 0;
           if (minReliability > 0) params.set('minReliability', String(minReliability));
 
-          // Balanced + cluster toggles
           if (document.getElementById('balanced-toggle').checked) params.set('balanced','1');
           if (document.getElementById('cluster-toggle').checked) params.set('cluster','title');
 
@@ -520,16 +520,19 @@
           const data = await res.json();
           if (data.error) throw new Error(data.error);
 
-          this.renderArticles(data.articles || []);
+          let articles = data.articles || [];
 
-          if (data.quotaExceeded) {
-            statusText.textContent = `Showing cached results — GNews daily quota reached`;
-            cacheText.textContent = `Response: quota (cached)`;
-          } else {
-            const cached = res.headers.get('X-Cache') === 'HIT' ? 'cached' : 'fresh';
-            statusText.textContent = `Loaded ${(data.articles || []).length} articles • Last updated: ${new Date().toLocaleTimeString()}`;
-            cacheText.textContent = `Response: ${cached}`;
+          // LR = exact same layout as 2-up; only the set is filtered
+          if (this.currentLayout === 'lr') {
+            const ok = new Set(['left','lean-left','right','lean-right']);
+            articles = articles.filter(a => ok.has((a.bias || '').trim()));
           }
+
+          this.renderArticles(articles);
+
+          const cached = res.headers.get('X-Cache') === 'HIT' ? 'cached' : 'fresh';
+          statusText.textContent = `Loaded ${articles.length} articles • Last updated: ${new Date().toLocaleTimeString()}`;
+          cacheText.textContent = `Response: ${cached}`;
         } catch (err) {
           errorEl.textContent = `Failed to load news: ${err.message}`;
           errorEl.style.display = 'block';
@@ -547,7 +550,6 @@
 
         el.innerHTML = articles.map(a => this.cardHTML(a)).join('');
 
-        // NEW: prioritize the first image for perceived speed
         const firstImg = el.querySelector('.thumb');
         if (firstImg) { firstImg.loading = 'eager'; firstImg.setAttribute('fetchpriority', 'high'); }
 
